--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.14.0",
     "xlsx": "^0.18.5"
   },
