--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-ga": "^3.3.1",
+    "react-ga4": "^3.3.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.14.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-latest/xlsx-latest.tgz"
