feat: add sitemap and robots.txt handling in Vercel configuration, update lastmod timestamps in sitemaps

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,14 @@
   "framework": "vite",
   "rewrites": [
     {
+      "source": "/sitemap.xml",
+      "destination": "/sitemap.xml"
+    },
+    {
+      "source": "/robots.txt", 
+      "destination": "/robots.txt"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
